--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.1.1",
+    "eslint": "^9.1.1",
+    "globals": "^15.1.0"
   }
 }
