--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,13 +7,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: node:14
+    container: node:alpine
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Lint with ESLint
         run: npx eslint .
